--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    background: #121312;
+    text-align: center;
+    font-size: 1.5rem;
+    color: white;
+    font-weight: bold;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.image{
+    width: 500px;
+    height: 400px;
+    border-radius: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.slider{
+    position: relative;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.leftArrow{
+    position: absolute;
+    top: 50%;
+    left: 60px;
+    font-size: 3rem;
+    z-index: 10;
+    cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.rightArrow{
+    position: absolute;
+    top: 50%;
+    right: 60px;
+    font-size: 3rem;
+    z-index: 10;
+    cursor: pointer;
+}
+
+.slide{
+    opacity: 0;
+    transition: 1s ease;
+}
+
+.slide.active{
+    opacity: 1;
+    transform: scale(1.08);
+    transition-duration: 1s;
 }
